Add CC test coverage for Kotlin supported types